--- a/Portfolio.css
+++ b/Portfolio.css
@@ -117,7 +117,7 @@ video {
   width: auto;
   margin-top: -2rem;
   padding: 1.6rem;
-  color: White;
+  color: #1abc9c;
   font-weight: bolder;
   font-size: 2rem;
   transition: 0.6s ease;
